--- a/MeetingRoomScheduler.Android/MeetingRoomScheduler.Android.csproj
+++ b/MeetingRoomScheduler.Android/MeetingRoomScheduler.Android.csproj
@@ -102,5 +102,10 @@
       <Name>MeetingRoomScheduler</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\Font Awesome 5 Brands-Regular-400.otf" />
+    <AndroidAsset Include="Assets\Font Awesome 5 Free-Regular-400.otf" />
+    <AndroidAsset Include="Assets\Font Awesome 5 Free-Solid-900.otf" />
+  </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
